# ledger-banking-rust

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  QWEN.md  README.md  deny.toml  docker-compose-adminer.yml  docker-compose.yml  llms.md  reason-purpose-refactoring.md  security.toml  test_setup.sh
banking-api/: Cargo.toml
banking-api/src/: error.rs  lib.rs
banking-api/src/command/: command.rs  mod.rs  person.rs
banking-api/src/domain/: account.rs  account_hold.rs  account_relations.rs  agent_network.rs  audit.rs  calendar.rs  casa.rs  channel.rs  collateral.rs  common.rs  compliance.rs  customer.rs  daily_collection.rs  fee.rs  loan.rs  mod.rs  person.rs  product.rs  reason_and_purpose.rs  reason_view.rs  referenced_person.rs  transaction.rs  workflow.rs
banking-api/src/service/: account_hold_service.rs  account_service.rs  audit_service.rs  calendar_service.rs  casa_service.rs  channel_service.rs  collateral_service.rs  compliance_service.rs  customer_service.rs  daily_collection_service.rs  eod_service.rs  fee_service.rs  hierarchy_service.rs  hold_service.rs  interest_service.rs  lifecycle_service.rs  loan_service.rs  mod.rs  person_service.rs  product_service.rs  reason_and_purpose_service.rs  reason_service.rs  transaction_service.rs
banking-api/src/views/: branch_views.rs  mod.rs
banking-api/tests/: stack_optimization_test.rs
banking-db/: Cargo.toml
banking-db-postgres/: Cargo.toml  TEST_README.md
banking-db-postgres/.sqlx/: query-1116c3b9c47bdfb57b723768b5d806adb7c761b9dfb69a160dba6c605b5af6dd.json  query-183cd701fc2d6bd4706901b45bb4303f287adda4ec879c3ec399df904831506f.json  query-6b6ac0336d2d42fee64ed1880751a7b6228f99591b09fe3bf0d2f920d5f09129.json  query-6d080c517b0ff251818e82ea81b5d4e941258e6aba7ecc18d94b8834a02741df.json  query-6d62bc3a72817b26424118324e5e839f597636f49e6c97bd6a508b663320101e.json  query-70587dc8783defea7d530eb38ae185b62bae378132b7b9fab9ca50bd8d17d0bc.json  query-772b4ca53b908727a1af126efa443be07f91006430419b5b860889560a4bf83e.json  query-87e1788fe7387c8e787db925f611ca64f33d1f1f0a32c68cd61f6e4a16e3a54d.json  query-897d8e00229b4bc2b5a78eb1a748673ff6dfe10533d5e54402d69eff9cd0553e.json  query-8dcb64c9965c5bd05b15bc463300bdb0c5636656622a024228dae5e846f22fd4.json  query-8f75af1ce0501131f498899ccd03a1c9d16de23a56728ad04cad84dbf8a2c4eb.json  query-96e47fd0ccb71761d39db31a4384ffd5caac32f58a8e1cb92e12e14e788d466f.json  query-a05c10ce01e9d854be5f1297616bb0441b33ba3e001419a997d0841a7700877b.json  query-bb1864158850ba3e42134c2e8dbdf34f16c7d9283300f917ec8055601d796d53.json  query-bcc7cae74ffba66d7603f4c4fbdb27c1eeef7961469b91b940e143c68d3a0c27.json  query-ce8f9f8b0dfefb0405dbbc61223bb3940a6c322eec83b47b043fa8ce5d3eed7f.json  query-daf624137abf1d779ffebdf1fdd5893944564d25411c25c0c895d10874c54ce5.json  query-e67253edc9031c1a903f1003b48e6d13c9b141bb7d906a6a2cb5801832ab155e.json  query-e92be6be9de8eb29263e157cbd43fe8ec8bad944a86300635a358905202ef7b5.json  query-eb5a9bcb31aed55849c55199cd67db1f140e3f7640dfe6d3a8e5f70d08d0d01b.json  query-f2c5d104c3a2d64bb00e87481bc0016773af0f302a02ce389556d7bcd2b67dce.json  query-fb399a9f985b3e6981f8cae58ca5f08ac4f9322f7b22df5ae8228b817c38cbea.json
banking-db-postgres/examples/: batch_operations_example.rs
banking-db-postgres/migrations/: 001_consolidated_dev_migration.sql  001_initial_migration.sql  001_initial_schema.sql  001_initial_schema_audit.sql  001_initial_schema_person.sql  002_initial_schema_person.sql  002_triggers_and_functions.sql  003_seed_data.sql  004_fee_management_tables.sql  005_specialized_account_functions.sql
banking-db-postgres/src/: lib.rs  postgres_repositories.rs  simple_models.rs  test_helper.rs  test_utils.rs  types.rs  utils.rs
banking-db-postgres/src/repository/: account_hold_repository_impl.rs  account_repository_impl.rs  account_repository_simple.rs  agent_network_repository_impl.rs  audit_repository_impl.rs  calendar_repository_impl.rs  channel_repository_impl.rs  collateral_repository_impl.rs  compliance_repository_impl.rs  compliance_repository_simple.rs  customer_repository_impl.rs  daily_collection_repository_impl.rs  executor.rs  fee_repository_impl.rs  mod.rs  person_country_repository_impl.rs  person_country_subdivision_repository_impl.rs  person_entity_reference_repository_impl.rs  person_locality_repository_impl.rs  person_location_repository_impl.rs  person_messaging_repository_impl.rs  person_person_repository_batch_impl.rs  person_person_repository_impl.rs  person_repository_impl.rs  product_repository_impl.rs  reason_and_purpose_repository_impl.rs  transaction_repository_impl.rs  transaction_repository_simple.rs  unit_of_work_impl.rs  workflow_repository_impl.rs
banking-db-postgres/tests/: README_CLEANUP.md  account_repository_tests.rs  batch_operations_test.rs  channel_repository_tests.rs  cleanup_demo.rs  commons.rs  compliance_repository_tests.rs  customer_repository_tests.rs  example_with_cleanup.rs  fee_repository_tests.rs  integration.rs  person_init.rs  person_repository_tests.rs  reason_and_purpose_repository_tests.rs  simple_account_test.rs  simple_compliance_test.rs  simple_transaction_test.rs  transaction_repository_tests.rs  unit_tests.rs  workflow_repository_tests.rs
banking-db-postgres/tests/fixtures/: cleanup.sql
banking-db-postgres/tests/suites/: account_repository_tests.rs  batch_operations_test.rs  channel_repository_tests.rs  cleanup_demo.rs  commons.rs  customer_repository_tests.rs  example_with_cleanup.rs  fee_repository_tests.rs  mod.rs  person_repository_tests.rs  reason_and_purpose_repository_tests.rs  test_helper.rs  transaction_repository_tests.rs  unit_tests.rs  workflow_repository_tests.rs
banking-db/src/: lib.rs
banking-db/src/models/: account.rs  account_hold.rs  agent_network.rs  audit.rs  calendar.rs  casa.rs  (+16 more)
banking-db/tests/: memory_test.rs  memory_test_city_cache.rs  memory_test_country_cache.rs  memory_test_moka.rs  memory_test_state_province_cache.rs
banking-logic/: Cargo.toml
banking-logic/src/: constants.rs  lib.rs
banking-logic/tests/: person_commands.rs  person_service_tests.rs  person_tests.rs
(+363 files in other folders)
