[workspace]
members = [
    "banking-api",
    "banking-db", 
    "banking-logic",
    "banking-db-postgres",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Banking Team <banking@company.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/company/ledger-banking-rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde", "db-postgres", "db-diesel-postgres"] }
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel_migrations = "2.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Zen engine for business rules
zen-engine = "0.8"

# Testing
tokio-test = "0.4"

# Logging and tracing
tracing = "0.1"
log = "0.4"

# Random number generation
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Collections
indexmap = { version = "2.0", features = ["serde"] }
heapless = { version = "0.8", features = ["serde"] }
blake3 = { version = "1.5", features = ["serde"] }

# Standard library collections
std = { version = "1.0", features = ["collections"] }