# Foreign Key Naming Convention Rules
# =====================================
# Applied consistently across all domain models for improved readability
# and explicit entity relationships in foreign key references:
#
# 1. Explicit Entity Reference: Include target entity name before '_id'
#    e.g., domicile_branch_id → domicile_agency_branch_id (target: AgencyBranch)
#
# 2. Keep Clear Names: Retain when field name clearly indicates target entity
#    e.g., customer_id → KEEP AS IS (target: Customer)
#
# 3. Person Reference Pattern: All '*_by' fields reference Person domain
#    e.g., updated_by → updated_by_person_id (target: Person)
#
# 4. Compound Names: Keep existing for fields targeting ReasonAndPurpose
#    e.g., loan_purpose_id → KEEP AS IS (target: ReasonAndPurpose, no Purpose struct)

[workspace]
members = [
    "banking-api",
    "banking-db", 
    "banking-logic",
    "banking-db-postgres",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Banking Team <banking@company.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/company/ledger-banking-rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde", "db-postgres", "db-diesel-postgres", "maths"] }
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal", "derive", "macros"], default-features = false }

# Caching
moka = { version = "0.12", features = ["future"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Testing
tokio-test = "0.4"

# Security and linting tools (dev dependencies)

# Logging and tracing
tracing = "0.1"
log = "0.4"

# Random number generation
rand = "0.8"
heapless = { version = "0.8", features = ["serde"] }

