[package]
name = "banking-db-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
postgres_tests = []
offline = []
full_sqlx = []

[dependencies]
# Workspace dependencies
banking-api = { path = "../banking-api", features = ["sqlx"] }
banking-db = { path = "../banking-db" }

# Database
sqlx = { workspace = true, features = ["rust_decimal"] }
tokio.workspace = true

# Serialization
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true

# Error handling

# Async traits
async-trait.workspace = true

# Stack optimization
heapless.workspace = true

# Logging

[dev-dependencies]
tokio-test.workspace = true
sqlx = { workspace = true, features = ["migrate"] }

[package.metadata.sqlx]
migrations = "./migrations"

[[test]]
name = "workflow_repository_tests"
path = "tests/workflow_repository_tests.rs"

[[test]]
name = "account_repository_tests"
path = "tests/account_repository_tests.rs"

[[test]]
name = "transaction_repository_tests"
path = "tests/transaction_repository_tests.rs"

[[test]]
name = "example_with_cleanup"
path = "tests/example_with_cleanup.rs"

[[test]]
name = "cleanup_demo"
path = "tests/cleanup_demo.rs"

[[test]]
name = "fee_repository_tests"
path = "tests/fee_repository_tests.rs"