[package]
name = "banking-db-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [
    "account_hold_repository",
    "account_repository",
    "agent_network_repository",
    "calendar_repository",
    "channel_repository",
    "collateral_repository",
    "compliance_repository",
    "customer_repository",
    "daily_collection_repository",
    "fee_repository",
    "person_repository",
    "product_repository",
    "reason_and_purpose_repository",
    "transaction_repository",
    "workflow_repository",
]
postgres_tests = []
offline = []
full_sqlx = []
account_hold_repository = []
account_repository = []
agent_network_repository = []
calendar_repository = []
channel_repository = []
collateral_repository = []
compliance_repository = []
customer_repository = []
daily_collection_repository = []
fee_repository = []
person_repository = []
product_repository = []
reason_and_purpose_repository = []
transaction_repository = []
workflow_repository = []

[dependencies]
# Workspace dependencies
banking-api = { path = "../banking-api", features = ["sqlx"] }
banking-db = { path = "../banking-db" }

# Database
sqlx = { workspace = true, features = ["rust_decimal"] }
tokio.workspace = true

# Serialization
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true

# Error handling

# Async traits
async-trait.workspace = true

# Stack optimization
heapless.workspace = true
twox-hash = "2.1.1"

# Logging

[dev-dependencies]
tokio-test.workspace = true
sqlx = { workspace = true, features = ["migrate"] }

[package.metadata.sqlx]
migrations = "./migrations"


[[test]]
name = "account_repository_tests"
required-features = ["account_repository"]

[[test]]
name = "channel_repository_tests"
required-features = ["channel_repository"]

[[test]]
name = "compliance_repository_tests"
required-features = ["compliance_repository"]

[[test]]
name = "customer_repository_tests"
required-features = ["customer_repository"]

[[test]]
name = "fee_repository_tests"
required-features = ["fee_repository"]

[[test]]
name = "person_repository_tests"
required-features = ["person_repository"]

[[test]]
name = "reason_and_purpose_repository_tests"
required-features = ["reason_and_purpose_repository"]

[[test]]
name = "transaction_repository_tests"
required-features = ["transaction_repository"]

[[test]]
name = "workflow_repository_tests"
required-features = ["workflow_repository"]
