[package]
name = "banking-db-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
banking-api = { path = "../banking-api", features = ["sqlx"] }
banking-db = { path = "../banking-db" }
banking-logic = { path = "../banking-logic" }

# Database
sqlx = { workspace = true, features = ["rust_decimal"] }
tokio.workspace = true

# Serialization
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true

# Error handling

# Async traits
async-trait.workspace = true

# Stack optimization
heapless.workspace = true
twox-hash = "2.1.1"

# Logging

[dev-dependencies]
tokio-test.workspace = true
sqlx = { workspace = true, features = ["migrate"] }

[package.metadata.sqlx]
migrations = "./migrations"
