[package]
name = "banking-logic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
heapless = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "rust_decimal"] }

# Banking crates
banking-api = { path = "../banking-api" }
banking-db = { path = "../banking-db" }
# banking-db-postgres = {path="../banking-db-postgres"}

# External integrations
reqwest = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

# Configuration

[dev-dependencies]
banking-db-postgres = { path = "../banking-db-postgres", features = ["test-utils"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal"] }

[features]
postgres_tests = []

